# c_image_processing_treatment

./: image.c  image.h  input_image.txt  main.c  meson.build  readme.md  seed.txt  test.c
imageCrust/: imageCrust.c  imageCrust.h
imageGray/: imageGray.c  imageGray.h
imageRGB/: imageRGB.c  imageRGB.h
pixeis/: exibirPixel.c  exibirPixel.h
src/: main.c
src/imageCrust/: imageCrust.c  imageCrust.h  meson.build
src/imageGray/: imageGray.c  imageGray.h  meson.build
src/imageRGB/: imageRGB.c  imageRGB.h  meson.build
src/imageStructAndGlobVar/: imageStructAndGlobVar.c  imageStructAndGlobVar.h  meson.build
